# upodesh

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  upodesh.code-workspace
.github/workflows/: rust.yml
benches/: suggestions.rs
data/: preprocessed-patterns.json  source-common-patterns.json  source-common-patterns.txt
examples/: alloc.rs  avro-regex.rs  avro.rs  bangla-regex.rs  example.rs  previous.rs
generate/: Cargo.toml  README.md
generate/src/: main.rs
src/: fst.rs  lib.rs  new.rs  patterns.rs  suggest.rs  trie.rs  utils.rs  words.fst  words.rs
src/avro/: mod.rs  patterns.fst  suggest.rs  utils.rs
src/bangla/: mod.rs
