[package]
name = "upodesh"
description = "A Rust library for generating Bengali word suggestions based on a given input string."
version = "0.1.0"
edition = "2024"
build = "build.rs"
license = "MIT"
repository = "https://github.com/OpenBangla/upodesh"
keywords = ["unicode", "bengali", "suggestion"]

[dependencies]
fst = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
ahash = "0.8"
regex = "1"
okkhor = { version = "0.7", features = ["regex"] }
peak_alloc = "0.2"

[build-dependencies]
fst = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "suggestions"
harness = false

# [profile.release]
# debug = true
