[package]
name = "upodesh"
description = "A Rust library for generating Bengali word suggestions based on a given input string."
version = "0.4.1"
license = "MIT"
repository = "https://github.com/OpenBangla/upodesh"
keywords = ["unicode", "bengali", "suggestion"]
exclude = ["generate", "generate/*", "bencher", "bencher/*"]
edition = "2021"
rust-version = "1.75.0"

[dependencies]
fst = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1"

[dev-dependencies]
criterion = "0.8"
ahash = "0.8"
regex = "1"
okkhor = { version = "0.8", features = ["regex"] }
peak_alloc = "0.3"

[[bench]]
name = "suggestions"
harness = false

# [profile.release]
# debug = true
